--- a/src/ng2-smart-table/ng2-smart-table.html
+++ b/src/ng2-smart-table/ng2-smart-table.html
@@ -9,6 +9,7 @@
                         (create)="create.emit($event)"
                         (selectAllRows)="onSelectAllRows($event)"
                         (sort)="sort($event)"
+                        (titleChange)="titleChange.emit($event)"
                         (filter)="filter($event)">
     </thead>
 
